--- a/_includes/footer/footer-en.html
+++ b/_includes/footer/footer-en.html
@@ -21,11 +21,14 @@
 
 <footer>
     <div id="footer-content">
-        <div id="github">
-            <iframe src="http://ghbtns.com/github-btn.html?user=strongloop&amp;repo=express&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+        <div id="copyright">
+          <i class="fa fa-copyright"></i><a href="https://github.com/strongloop/express/blob/master/LICENSE"> MIT License</a>
         </div>
-        <div id="sponsor">The Express project is sponsored by <a href="http://strongloop.com/">StrongLoop</a>.</div>
-        <div id="fork"><a href="https://github.com/strongloop/express?_ga=1.39756451.1408343404.1407943788">Fork the website on GitHub</a>
+        <div id="fork">
+          <a href="https://github.com/strongloop/express?_ga=1.39756451.1408343404.1407943788"> Fork the Express repository on GitHub.</a>
+        </div>
+        <div id="github">
+            <iframe src="http://ghbtns.com/github-btn.html?user=charmainebonifacio&amp;repo=charmainebonifacio.github.io&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
         </div>
     </div>
 </footer>
