--- a/_includes/header/header-en.html
+++ b/_includes/header/header-en.html
@@ -2,119 +2,53 @@
   <div id="mobile-menu">
       <div id="nav-button" class="fa fa-bars fa-2x button"></div>
   </div>
-  <section id="logo"><a href="/" class="express">Express</a>
-  </section>
+  <div id="logo">
+    <a href="/" class="express">Charmaine Bonifacio</a>
+  </div>
   <div id="navbar">
       <ul id="navmenu">
-          <li><a href="{% if page.lang == 'en' %}/{% else %}/{{ page.lang }}/{% endif %}" id="home-menu"{% if page.menu == 'home' %} class="active"{% endif %}>Home</a></li>
           <li>
-              <ul id="getting-started-menu" class="menu">
-                  <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/starter/installing.html"{% if page.menu == 'starter' %} class="active"{% endif %}>Getting started</a>
-                      <ul>
-                          <li>
-                            <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/starter/installing.html">
-                              Installing
-                            </a>
-                          </li>
-                          <li>
-                          <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/starter/generator.html">
-                            Express generator
-                          </a>
-                          </li>
-                          <li>
-                            <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/starter/hello-world.html">
-                              Hello world
-                            </a>
-                          </li>
-                          <li>
-                            <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/starter/basic-routing.html">
-                              Basic routing
-                            </a>
-                          </li>
-                          <li>
-                            <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/starter/static-files.html">
-                              Static files
-                            </a>
-                          </li>
-                          <li>
-                            <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/starter/faq.html">
-                              FAQ
-                            </a>
-                          </li>
-                      </ul>
-                  </li>
-              </ul>
+            <a href="{% if page.lang == 'en' %}/{% else %}/{{ page.lang }}/{% endif %}" id="home-menu"{% if page.menu == 'home' %} class="active"{% endif %}><i class="fa fa-home fa-lg"></i></a>
+          </li>
+          <li>
+            <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/about/bio.html"{% if page.menu == 'about' %} class="active"{% endif %}><i class="fa fa-info fa-lg"></i></a>
+          </li>
+          <li>
+            <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/about/awards.html"{% if page.menu == 'about' %} class="active"{% endif %}><i class="fa fa-trophy fa-lg"></i></a>
           </li>
           <li>
               <ul id="guide-menu" class="menu">
-                  <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/guide/routing.html"{% if page.menu == 'guide' %} class="active"{% endif %}>Guide</a>
+                  <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/research/interests.html"{% if page.menu == 'research' %} class="active"{% endif %}><i class="fa fa-briefcase fa-lg"></i></a>
                       <ul>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/guide/routing.html">Routing</a>
+                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/research/interests.html">Research Interests</a>
                           </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/guide/using-middleware.html">Using middleware</a>
+                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/research/publication.html">Publication</a>
                           </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/guide/using-template-engines.html">Using template engines</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/guide/error-handling.html">Error handling</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/guide/debugging.html">Debugging</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/guide/behind-proxies.html">Express behind proxies</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/guide/migrating-4.html">Moving to Express 4</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/guide/database-integration.html">Database integration</a>
+                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/research/presentation.html">Presentation</a>
                           </li>
                       </ul>
                   </li>
               </ul>
           </li>
           <li>
-              <ul id="application-menu" class="menu">
-                  <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/4x/api.html"{% if page.menu == 'api' %} class="active"{% endif %}>API reference</a>
-                      <ul>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/4x/api.html">4.x</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/3x/api.html">3.x</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/2x/">2.x (deprecated)</a>
-                          </li>
-                      </ul>
-                  </li>
-              </ul>
+            <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/research/code.html"{% if page.menu == 'research' %} class="active"{% endif %}><i class="fa fa-code fa-lg"></i></a>
           </li>
           <li>
-              <ul id="advanced-topics-menu" class="menu">
-                  <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/advanced/developing-template-engines.html"{% if page.menu == 'advanced' %} class="active"{% endif %}>Advanced topics</a>
-                      <ul>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/advanced/developing-template-engines.html">Template engines</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/advanced/pm.html">Using process managers</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/advanced/security-updates.html">Security updates</a>
-                          </li>
-                      </ul>
-                  </li>
-              </ul>
+            <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/teaching/courses.html"{% if page.menu == 'teaching' %} class="active"{% endif %}><i class="fa fa-pencil fa-lg"></i></a>
           </li>
           <li>
               <ul id="resources-menu" class="menu">
-                  <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/resources/glossary.html"{% if page.menu == 'resources' %} class="active"{% endif %}>Resources</a>
-                      <ul>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/resources/glossary.html">Glossary</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/resources/middleware.html">Middleware</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/resources/community.html">Community</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/resources/books-blogs.html">Books and blogs</a>
-                          </li>
-                          <li><a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/resources/applications.html">Applications</a>
-                          </li>
-                      </ul>
+                  <li>
+                    <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/service/list.html"{% if page.menu == 'resources' %} class="active"{% endif %}><i class="fa fa-pagelines fa-lg"></i></a>
                   </li>
               </ul>
           </li>
+          <li>
+            <a href="https://ca.linkedin.com/in/charmainebonifacio" id="home-menu"><i class="fa fa-linkedin fa-lg"></i></a>
+          </li>
+          <li>
+            <a href="https://github.com/charmainebonifacio" id="home-menu"><i class="fa fa-github fa-lg"></i></a>
+          </li>
       </ul>
-  </div><a href="http://strongloop.com/node-js/training/" title="Node and Express Training from StrongLoop" id="strongloop-header">Express and Node.js Training from StrongLoop</a>
+  </div>
 </header>
