--- a/_includes/header/header-en.html
+++ b/_includes/header/header-en.html
@@ -26,7 +26,7 @@
             <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/teaching/courses.html"{% if page.menu == 'teaching' %} class="active"{% endif %}><i class="fa fa-pencil fa-lg"></i></a>
           </li>
           <li>
-            <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/service/list.html"{% if page.menu == 'service' %} class="active"{% endif %}><i class="fa fa-pagelines fa-lg"></i></a>
+            <a href="{% if page.lang != 'en' %}/{{ page.lang }}{% endif %}/volunteer/list.html"{% if page.menu == 'volunteer' %} class="active"{% endif %}><i class="fa fa-pagelines fa-lg"></i></a>
           </li>
           <li>
             <a href="https://ca.linkedin.com/in/charmainebonifacio" id="home-menu"><i class="fa fa-linkedin fa-lg"></i></a>
